--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,20 @@ html, body{
 	background-image:url(../images/ricepaper_v3.png);
 	}
 
+p {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	line-height:30px;
+	font-size:18px;
+}
 
+html{
+	min-height:100%;
+	position:relative;
+}
+
+body {
+	margin-bottom:98px;
+}
 
 
 #main-container {
@@ -19,16 +32,19 @@ html, body{
 .navbar-default {
 	background-color:white;
 	margin-bottom:0px;
+	border-bottom: 1px #c2b7b0 solid;
 	
 }
 
-.nav li a {
+/*.nav li a {*/
+.navbar-default .navbar-nav>li>a{
 	height:14px;
 	line-height: 14px;
 	padding:0px 15px;
-	border-right:1px solid blue;
+	border-right:1px solid #c2b7b0;
 	margin-top:38px;
 	margin-bottom:38px;
+	color:#c2b7b0;
 }
 
 #contact {
@@ -43,6 +59,17 @@ html, body{
     line-height: 90px;
     background-color:#4aaaa5;
     margin-left:0px !important;
+    font-weight:600;
+}
+
+.navbar-brand,h1,h2,h3{
+	font-family:'Georgia', Times, 'Times New Roman', serif;
+}
+
+/*div.portfolio-image:nth-child(n+3)*/ 
+div.portfolio-image:nth-of-type(n+3) {
+	margin-top:30px;
+
 }
 
 /*[class*="col-"]{
@@ -50,10 +77,11 @@ html, body{
 }*/
 
 .panel {
-	border:1px solid gray;
+	border:1px #dddddd solid;
 	border-radius:unset;
 	box-shadow:none;
 	margin-top:30px;
+
 }
 
 #aboutMeImage{
@@ -65,6 +93,25 @@ html, body{
 
 .panel>div {
 	padding:30px;
+
+}
+
+.portfolio-image {
+	position:relative;
+}
+
+.portfolio-banner{
+	background-color:#4aaaa5;
+	color:white;
+	font-size:24px;
+	z-index: 2;
+	position:absolute;
+	bottom:10px;
+	height:24px;
+	width:100%;
+	text-align:center;
+	padding:20px 0;
+	line-height:0;
 }
 
 .panel>.panel-heading{
@@ -74,8 +121,10 @@ html, body{
 
 .panel h2, .panel h3 {
 	padding: 30px 0px;
-	border-bottom:1px solid gray;
+	border-bottom:2px #c2b7b0 solid;
 	margin:0px;
+	font-weight: 600;
+    color: #4aaaa5;
 }
 
 #connect-links {
@@ -84,7 +133,26 @@ html, body{
 }
 
 
+footer {
+    /*clear: both;*/
+    background-color: #666666;
+    border-top: 8px #4aaaa5 solid;
+    height: 90px;
+    color: #c2b7b0;
+    width: 100%;
+    margin-top: 15px;
+    position:absolute;
+    bottom:0;
 
+}
+.footer .container {
+	height:100%;
+	line-height:70px;
+}
+.footer-content{
+	display:inline-block;
+	vertical-align:middle;
+}
 /*// Large devices (desktops, 992px and up)*/
 @media (max-width: 991px) { 
 	
@@ -98,7 +166,7 @@ html, body{
 
 	}
 	#connect-text {
-		font-size: 2vw;
+		font-size: 1.8vw;
 		}	
 
 }
@@ -122,9 +190,8 @@ html, body{
 		height:100%;
 	}
 
-	.nav li a {
-		margin:0px;
-		padding:0px auto;
+	.navbar-default .navbar-nav>li>a {
+		margin:0;
 		text-align:center;
 	}
 
